[package]
name = "airnest"
version = "0.1.2"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Silent, async SQLite persistence for Rust. Derive once, store forever."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/audns/airnest"
homepage = "https://github.com/audns/airnest"
documentation = "https://docs.rs/airnest"
keywords = ["sqlite", "persistence", "database", "async", "orm"]
categories = ["database", "asynchronous"]

[dependencies]
airnest-macros = { version = "0.1.0" }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
bitcode = { version = "0.6.9", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v7", "serde"] }
postcard = { version = "1.1.3", optional = true, features = ["use-std"] }
redb     = { version = "2", optional = true }

[features]
default = []
postcard = ["dep:postcard"]
redb     = ["dep:redb"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tempfile = "3"
anyhow = "1"
